<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">心情溫度計</string>
    <string name="main_button_map">心衛資源</string>
    <string name="google_maps_key">AIzaSyC-K4SAiKNc4soViae4dpz7m0vijgbXFok</string>
    <string name="action_settings">Settings</string>
    <string name="map_search_keyword">geo:0,0?q=%s</string>
    <string name="homePath">/homeScreen</string>
    <string name="quizPath">/quizScreen</string>
    <string name="phone"></string>
    <string name="call_tether">張老師1980</string>
    <string name="call_line">生命線1995</string>
    <string name="feeling_bad_call_me">心情不好想找人談談嗎</string>
    <string name="please_save_line_to_whom_in_need">歡迎提供給需要的朋友們</string>
    <string name="two_strings">%1$s%2$s</string>
    <string name="bsrs">心情溫度計</string>
    <string name="resource">心衛資源</string>
    <string name="e_book">心理健康秘笈</string>
    <string name="quiz_records">測驗記錄</string>
    <string name="feeling_bad_call_me_title">我需要幫助</string>
    <string name="quiz_instruction">請您仔細回想「在最近一星期中(包括今天)」，這些問題使您感到困擾或苦惱的程度，然後選一個您認為最能代表您感覺的答案。</string>
    <string name="quiz_instruction_hight_light">在最近一星期中(包括今天)</string>
    <string name="quiz_option_four">非常厲害</string>
    <string name="quiz_option_three">厲害</string>
    <string name="quiz_option_two">中等程度</string>
    <string name="quiz_option_one">輕微</string>
    <string name="quiz_option_zero">完全沒有</string>
    <string name="quiz_question_1">睡眠困難，譬如難以入睡、易醒或早醒</string>
    <string name="quiz_question_2">感覺緊張不安</string>
    <string name="quiz_question_3">覺得容易苦惱或動怒</string>
    <string name="quiz_question_4">感覺憂鬱、心情低落</string>
    <string name="quiz_question_5">覺得比不上別人</string>
    <string name="quiz_question_six">★有自殺的想法</string>
    <string name="next_quiz">下一題</string>
    <string name="quiz_result">測驗結果</string>
    <string name="phone_number_of_teacher">1980</string>
    <string name="phone_number_of_line">1995</string>
    <string name="phone_number_of_relieved">0800788995</string>
    <string name="relieved_line">安心專線(免付費)：0800–788–995</string>
    <string name="fa_smile_o"></string>
    <string name="fa_frown_o"></string>
    <string name="score_text">分</string>
    <string name="result_score_text">%d分</string>
    <string name="score_level">認識心情分級</string>
    <string name="score_level_1">0–5分</string>
    <string name="score_level_1_title_text">一般正常範圍</string>
    <string name="score_level_1_text">表示身心適應狀況良好。</string>
    <string name="score_level_2">6–9分</string>
    <string name="score_level_2_title_text">輕度情緒困擾</string>
    <string name="score_level_2_text">建議找家人或朋友談談，抒發情緒。</string>
    <string name="score_level_3">10–14分</string>
    <string name="score_level_3_title_text">中度情緒困擾</string>
    <string name="score_level_3_text">建議尋求抒壓管道或接受心理專業諮詢。</string>
    <string name="score_level_4">15以上</string>
    <string name="score_level_4_title_text">重度情緒困擾</string>
    <string name="score_level_4_text">建議諮詢精神科醫師接受進一步評估。</string>
    <string name="result_hint">◎附加題「有無自殺想法」：評分為2分以上(中等程度)時，宜尋求專業諮詢或接受精神科治療</string>
    <string name="quiz_again">再測一次</string>
    <string name="generic_server_down">伺服器逾時無回應</string>
    <string name="no_internet">請檢查網路狀態</string>
    <string name="back_to_welcome">回首頁</string>
    <string name="action_profile">Profile</string>
    <string name="action_call">Call</string>
    <string name="bars_action_profile_title">測驗身分</string>
    <string name="bsrs_action_call_title">聊聊</string>

    <string-array name="taps_name">
        <item>@string/bsrs</item>
        <item>@string/quiz_records</item>
        <item>@string/e_book</item>
        <item>@string/resource</item>
        <!--<item></item>-->
    </string-array>

    <string name="profile_intro_text">歡迎使用心情溫度計！\n心情溫度計為簡式健康量表(Brief Symptom Rating
        Scale，簡稱BSRS-5)的俗稱，由台大醫院李明濱教授設計開發而成。目的在於能夠迅速了解個人的心理困擾程度，可自我量測，藉以了解自己的心情狀態，也可以用來幫週遭的人施測。\n讓我們一同關懷自身與週邊親友的心理健康，成為珍愛生命守門人。</string>
    <string name="quiz_extra">附加題</string>
    <string name="gender">gender</string>
    <string name="profile_intro_auth_text">(本應用程式設計者游佳蓉)</string>
    <string name="begin_quiz">開始檢測</string>

    <string name="profile_gender_text">請問您的性別為？</string>
    <string name="profile_birthday_text">請問您的生日為？</string>
    <string name="gender_male">男性</string>
    <string name="gender_female">女性</string>
    <string name="profile_birthday_year">年</string>
    <string name="profile_birthday_month">月</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="next">下一步</string>
    <string name="positive_button_text">OK</string>
    <string name="profile_filling_tips">請填寫完整資訊</string>
    <string name="category_bsrs">bsrs</string>
    <string name="action_quiz">actionQuiz</string>
    <string name="label_quiz">labelQuiz</string>
</resources>
