<RelativeLayout
    android:id="@+id/call_main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_blue"
    tools:context="tw.org.tsos.bsrs.fragment.CallFragment">


    <!--<TextView
        android:id="@+id/call_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/feeling_bad_call_me_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"/>-->

    <LinearLayout
        android:id="@+id/score_face"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/main_menu_phone_icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="50sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feeling_bad_call_me"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_relieved_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/score_face"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/relieved_line"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/button_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_relieved_line"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/call_tether"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <Button
        android:id="@+id/button_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_teacher"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/call_line"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_line"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/please_save_line_to_whom_in_need"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

</RelativeLayout>
