<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/grey"
              android:orientation="vertical"
              tools:context="tw.org.tsos.bsrs.fragment.ProfileFragment">

    <RelativeLayout
        android:id="@+id/welcome_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:padding="20dp"
        android:visibility="visible">

        <ScrollView
            android:layout_above="@+id/profile_next"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_intro_text"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/profile_intro_auth_text"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </LinearLayout>
        </ScrollView>


        <Button
            android:id="@+id/profile_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_margin="20dp"
            android:background="@drawable/round_corner_white_to_black"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/next"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_gender_text"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <RadioGroup
                android:id="@+id/profile_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_male"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_birthday_text"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <LinearLayout
                android:id="@+id/profile_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/profile_birthday_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/round_corner_white"
                    android:gravity="center"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/profile_birthday_year"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <Spinner
                    android:id="@+id/profile_birthday_month"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/round_corner_white"
                    android:gravity="center"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/profile_birthday_month"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/profile_begin_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/round_corner_white_to_black"
            android:padding="20dp"
            android:text="@string/begin_quiz"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </RelativeLayout>
</LinearLayout>
