<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                tools:context="tw.org.tsos.bsrs.ResultFragment">

    <TextView
        android:id="@+id/score_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="：）"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/score_face"
        android:layout_marginLeft="28dp"
        android:layout_toEndOf="@+id/score_face"
        android:layout_toRightOf="@+id/score_face"
        android:text="測驗結果"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="@string/score_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/level_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/score_face"
        android:text="為一般正常範圍，表示身心適應狀況良好。"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="HardcodedText"/>

    <Button
        android:id="@+id/button_resource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/resource"/>

    <Button
        android:id="@+id/button_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_resource"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/score_level"/>
</RelativeLayout>
